// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getContentWrapperJssStyle() should return correct css for width: basic 1`] = `
Object {
  "@media (min-width: 1760px)": Object {
    "padding": "0 10vw",
  },
  "@media (min-width: 1920px)": Object {
    "padding": "0 12rem",
  },
  "margin": "0 auto",
  "maxWidth": "96rem",
  "minWidth": 0,
  "padding": "0 7vw",
  "width": "100%",
}
`;

exports[`getContentWrapperJssStyle() should return correct css for width: extended 1`] = `
Object {
  "margin": "0 auto",
  "maxWidth": "120rem",
  "minWidth": 0,
  "width": "100%",
}
`;

exports[`getContentWrapperJssStyle() should return correct css for width: fluid 1`] = `
Object {
  "margin": "0 auto",
  "minWidth": 0,
  "width": "100%",
}
`;
